# FNDR

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DEMO.md  Makefile  README.md  TESTING.md  autofill.html  download_embedding_model.sh  download_model.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .env.example  Cargo.toml  Entitlements.plist  Info.plist  build.rs  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: fndr_diagnostic.rs
src-tauri/icons/: icon.icns
src-tauri/sidecar/: agent_runner.py  cua_runner.py  fastvlm_runner.py  graphiti_service.py  minilm_embedder.py  orpheus_tts_runner.py  parakeet_runner.py  requirements.txt  whisper_gguf_runner.py
src-tauri/sidecars/: whisper_gguf_runner.py
src-tauri/src/: README.md  config.rs  downloads.rs  lib.rs  main.rs  memory_compaction.rs  memory_quality.rs  models.rs  speech.rs  system_resources.rs
src-tauri/src/accessibility/: mod.rs
src-tauri/src/agent/: actions.rs  mod.rs
src-tauri/src/api/: commands.rs  mod.rs  onboarding.rs
src-tauri/src/capture/: clipboard.rs  dedupe.rs  entity_extractor.rs  macos.rs  mod.rs  permissions.rs  sampling.rs  text_cleanup.rs
src-tauri/src/context_runtime/: entity_route.rs  graph_route.rs  keyword_route.rs  mod.rs  retrieval_routes.rs  temporal_route.rs  vector_route.rs  wiki_policy.rs
src-tauri/src/demo/: mod.rs
src-tauri/src/embed/: chunking.rs  clip.rs  mod.rs  onnx.rs
src-tauri/src/embedding/: chunking.rs  clip_vision.rs  mod.rs  onnx.rs
src-tauri/src/graph/: community.rs  edges.rs  entities.rs  graph_index.rs  graph_rerank.rs  graph_store.rs  integration_test.rs  mod.rs  pathfinding.rs  projection.rs  projection_commands.rs  projection_privacy.rs  projection_scoring.rs  schema.rs  traversal.rs  types.rs
src-tauri/src/inference/: image_semantics.rs  mod.rs  model_config.rs  model_worker.rs  qwen_vl_memory.rs  vlm.rs  vlm_router.rs
src-tauri/src/ipc/: mod.rs  onboarding.rs
src-tauri/src/mcp/: mod.rs  tls.rs  token.rs
src-tauri/src/meeting/: mod.rs
src-tauri/src/memory/: distill.rs  embed_doc.rs  evidence.rs  mod.rs  reopen.rs  repair.rs  types.rs  validate.rs
src-tauri/src/memory_insight/: derive.rs  embedding_text.rs  fluff.rs  mod.rs
src-tauri/src/ocr/: mod.rs  vision.rs
src-tauri/src/privacy/: blocklist.rs  mod.rs  safety_gate.rs
src-tauri/src/search/: hybrid.rs  memory_cards.rs  mod.rs  query_processor.rs  (+1 more)
src-tauri/tests/: agent_regression.rs  anti_overfitting.rs  memory_browse.rs  retrieval_routes.rs  search_flow.rs  search_relevance_eval.rs  store_graph_regressions.rs
(+312 files in other folders)
